--- a/.github/workflows/flutter_web.yaml
+++ b/.github/workflows/flutter_web.yaml
@@ -20,7 +20,7 @@ jobs:
           channel: 'beta'
 
       - name: Enable Flutter web
-        run: flutter config --enabvle-web
+        run: flutter config --enable-web
 
       - name: Install dependencies
         run: flutter packages get
